# TinyReflect

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Framework/: CMakeLists.txt
Framework/Include/: Class.h  ClassVisitor.h  DefaultTypes.h  Enum.h  EnumMember.h  Field.h  File.h  FileReader.h  FileWriter.h  Iterator.h  Map.h  MapClass.h  Property.h  StringClass.h  TemplateClass.h  Type.h  Vector.h  VectorClass.h
Framework/Source/: Class.cpp  DefaultTypes.cpp  Enum.cpp  EnumMember.cpp  Field.cpp  File.cpp  FileReader.cpp  FileWriter.cpp  StringClass.cpp  TemplateClass.cpp  Type.cpp
HeaderTool/: CMakeLists.txt
HeaderTool/Include/: Common.h  Generator.h  HeaderTool.h  ReflectedClass.h  ReflectedEnum.h  ReflectedField.h  ReflectedStruct.h  TranslationUnit.h  TypeFinder.h
HeaderTool/Source/: Common.cpp  Generator.cpp  HeaderTool.cpp  ReflectedClass.cpp  ReflectedEnum.cpp  ReflectedField.cpp  ReflectedStruct.cpp  TranslationUnit.cpp  TypeFinder.cpp
Sample/: CMakeLists.txt
Sample/Include/: DumpVisitor.h  TestObject.h  TestObjectCustom.h
Sample/Source/: DumpVisitor.cpp  TestObject.cpp  TestObjectCustom.cpp
Samples/: CMakeLists.txt
Samples/BasicSample/: CMakeLists.txt  compile_commands.json
Samples/BasicSample/Include/: DumpVisitor.h  TestObject.h
Samples/BasicSample/Source/: BasicSample.cpp  DumpVisitor.cpp
Samples/JsonSample/: CMakeLists.txt  compile_commands.json
Samples/JsonSample/Include/: JsonReader.h  JsonWriter.h  TestObject.h
Samples/JsonSample/Source/: JsonReader.cpp  JsonSample.cpp  JsonWriter.cpp
